using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DomainLayer.Objects.Visas
{
    public interface IVisaDocumentationRequirements
    {
        string Description { get; init; }
    }
}
