using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DomainLayer.Objects.Visas
{
    public interface IVisaEligibilityRules
    {
        string Eligibility { get; init; }
        List<string> EligibleCountires { get; init;}
    }
}
